<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="about"><![CDATA[<big><b>Note Management</b></big><br><b>Version: 1.0.6</b><br><br>2014-2018 Memoeslink Futura<br><small>Guillermo Almaguer (memoeslink)</small><br><small>memocad@gmail.com</small><br><br>Note management app<br><br><font color=#53E3B3>Images:</font><br><i><font color=#FFFDC4>• Freepik</font></i> [<font color=#99BAD1>Flaticon Basic License</font>] (<cite>http://www.flaticon.com/</cite>)<br><i><font color=#FFFDC4>• iconpack</font></i> [<font color=#B1A5B6>Iconfinder Basic License</font>] (<cite>https://www.iconfinder.com/</cite>)<br><i><font color=#FFFDC4>• Madebyoliver</font></i> [<font color=#99BAD1>Flaticon Basic License</font>] (<cite>http://www.flaticon.com/</cite>)<br><i><font color=#FFFDC4>• Mark James</font></i> [<font color=#B9B0F4>CC BY 2.5</font>] (<cite>https://www.iconfinder.com/</cite>)<br><i><font color=#FFFDC4>• Yusuke Kamiyamane</font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<cite>https://www.iconfinder.com/</cite>)<br><br><font color=#53E3B3>Theme:</font><br><i><font color=#FDFCDA>Jérôme Van Der Linden: </font><font color=#FFFDC4>Android Holo Colors Generator</font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<cite>http://android-holo-colors.com/</cite>)<br><br><font color=#53E3B3>Code:</font><br><i><font color=#FDFCDA>• Kumar Bibek: </font><font color=#FFFDC4>Android Multipicker Library</font></i> [<font color=#D0F0B7>Apache License v2.0</font>] (<a href="https://github.com/coomar2841/android-multipicker-library/">https://github.com/</a>)<br><i><font color=#B9BCEE>• Android disable space only for EditText</font></i> [<font color=#FF9BB4>MIT License</font>] (<a href="http://stackoverflow.com/questions/33993041/android-disable-space-only-for-edittext/">http://stackoverflow.com/</a>)<br><i><font color=#B9BCEE>• Determine font color based on background color</font></i> [<font color=#FF9BB4>MIT License</font>] (<a href="http://stackoverflow.com/questions/1855884/determine-font-color-based-on-background-color/">http://stackoverflow.com/</a>)<br><i><font color=#B9BCEE>• Finding the dominant color of an image in an Android @drawable</font></i> [<font color=#FF9BB4>MIT License</font>] (<a href="http://stackoverflow.com/questions/8471236/finding-the-dominant-color-of-an-image-in-an-android-drawable/">http://stackoverflow.com/</a>)<br><i><font color=#B9BCEE>• Gson</font></i> [<font color=#D0F0B7>Apache License v2.0</font>] (<a href="https://github.com/google/gson/">https://github.com/</a>)<br><i><font color=#B9BCEE>• Html.fromHtml deprecated in Android N</font></i> [<font color=#FF9BB4>MIT License</font>] (<a href="http://stackoverflow.com/questions/37904739/html-fromhtml-deprecated-in-android-n/">http://stackoverflow.com/</a>)<br><i><font color=#B9BCEE>• Is it possible to use a String as a seed for an instance Random?</font></i> [<font color=#FF9BB4>MIT License</font>] (<a href="http://stackoverflow.com/questions/23981678/is-it-possible-to-use-a-string-as-a-seed-for-an-instance-random/">http://stackoverflow.com/</a>)<br><i><font color=#B9BCEE>• TextJustify - Android</font></i> [<font color=#D0F0B7>Apache License v2.0</font>] (<a href="https://github.com/bluejamesbond/TextJustify-Android/">https://github.com/</a>)]]></string>
    <string name="account_enter_email">Enter an email</string>
    <string name="account_enter_last_name">Enter your last name</string>
    <string name="account_enter_name">Enter your name</string>
    <string name="account_enter_password">Enter a password</string>
    <string name="account_enter_username">Enter a username</string>
    <string name="account_is_admin">Is an administrator</string>
    <string name="account_log_in">Log in!</string>
    <string name="account_log_in_description">Do you have an account?</string>
    <string name="account_management_title">Manage account</string>
    <string name="account_other_title">Edit account</string>
    <string name="account_passwords_match">Passwords match</string>
    <string name="account_passwords_not_match">Passwords do not match</string>
    <string name="account_remove_image">Remove profile image</string>
    <string name="account_repeat_password">Repeat password</string>
    <string name="account_select_image">Select a profile image:</string>
    <string name="account_title">Create account</string>
    <string name="action_back">Back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_create">Create</string>
    <string name="action_create_account">Create account</string>
    <string name="action_delete">Delete</string>
    <string name="action_exit">Exit</string>
    <string name="action_log_in">Log in</string>
    <string name="action_manage">Manage</string>
    <string name="action_update">Update</string>
    <string name="alert_about">About</string>
    <string name="alert_delete_account">Delete account</string>
    <string name="alert_delete_account_description">Do you want to delete your account?</string>
    <string name="alert_delete_other_account_description">Do you want to delete this account?</string>
    <string name="alert_exit_app">Exit application</string>
    <string name="alert_exit_app_description">Do you want to exit the app?</string>
    <string name="alert_note">Note</string>
    <string name="alert_restart">Application restart</string>
    <string name="alert_restart_description">The application will be restarted so changes can be reflected.</string>
    <string name="app_name">Note Management</string>
    <string name="app_preferences">appPrefs</string>
    <string name="event_wait">Wait a moment, please...</string>
    <string name="field_password">This field needs at least a number (6 characters min.).</string>
    <string name="field_title">This field can contain any character (1 character min.).</string>
    <string name="field_username">This field can contain any character except spaces (4 characters min.).</string>
    <string name="home_empty_note">There are not any notes!</string>
    <string name="login_create_account">Here!</string>
    <string name="login_create_account_description">Don\'t you have an account?</string>
    <string name="login_title">Login</string>
    <string name="management_empty_users">There are not any users!</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_home">Home</string>
    <string name="menu_log_off">Log off</string>
    <string name="menu_manage_accounts">Manage accounts</string>
    <string name="menu_settings">Settings</string>
    <string name="note_body"><![CDATA[<big><b>%1$s</b></big><br><small>Written by: %2$s (%3$s)</small><br><br>%4$s]]></string>
    <string name="note_edition_title">Edit note</string>
    <string name="note_enter_description">Enter a description</string>
    <string name="note_enter_title">Enter a title</string>
    <string name="note_header"><![CDATA[<big><b>%1$s</b></big><br><small>Written by: %2$s (%3$s)</small>]]></string>
    <string name="note_is_public">This is private</string>
    <string name="note_remove_image">Remove image</string>
    <string name="note_select_image">Select an image:</string>
    <string name="note_title">Create note</string>
    <string name="other_space">\u0020</string>
    <string name="preference_appearance_title">Appearance</string>
    <string name="preference_language_summary">Change the application language</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_note_aspect_summary">Shrink note presentation</string>
    <string name="preference_note_aspect_title">Compact view</string>
    <string name="preference_system_title">System</string>
    <string name="status_error">Error:</string>
    <string name="status_success">Success:</string>
    <string name="status_unknown">Unknown:</string>
    <string name="status_warning">Warning:</string>
    <string name="text_by">By:\u0020</string>
    <string name="text_ok">OK</string>
    <string name="text_unavailable_description">There\'s not an available description.</string>
    <string name="toast_image_size_error">Image is larger than 1MB.</string>
    <string name="toast_login_error">Username or password is wrong.</string>
    <string name="toast_login_fail">Login has failed.</string>
    <string name="toast_login_successful">Welcome, %1$s!</string>
    <string name="toast_max_user_limit">Maximum user limit has been reached.</string>
    <string name="toast_note_deleted">Note was deleted.</string>
    <string name="toast_note_not_deleted">Note couldn\'t be deleted.</string>
    <string name="toast_note_not_saved">Note couldn\'t be saved.</string>
    <string name="toast_note_not_updated">Note couldn\'t be updated.</string>
    <string name="toast_note_saved">Note has been saved.</string>
    <string name="toast_note_updated">Note has been updated.</string>
    <string name="toast_user_deleted">User was deleted.</string>
    <string name="toast_user_not_deleted">User couldn\'t be deleted.</string>
    <string name="toast_user_not_saved">User couldn\'t be saved.</string>
    <string name="toast_user_not_updated">User couldn\'t be updated.</string>
    <string name="toast_user_saved">User %1$s has been saved.</string>
    <string name="toast_user_updated">User %1$s has been updated.</string>
    <string name="toast_username_used">Username is already in use.</string>
    <string-array name="language_codes">
        <item>en</item>
        <item>es</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
</resources>
