<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/preference_appearance_title">
        <CheckBoxPreference
            android:key="setting_compactView"
            android:summary="@string/preference_note_aspect_summary"
            android:title="@string/preference_note_aspect_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_system_title">
        <ListPreference
            android:entries="@array/languages"
            android:entryValues="@array/language_codes"
            android:key="setting_language"
            android:summary="@string/preference_language_summary"
            android:title="@string/preference_language_title" />
    </PreferenceCategory>

    <Preference
        android:key="backPreference"
        android:widgetLayout="@layout/button" />
</PreferenceScreen>