<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.app.memoeslink.notemanagement.AccountScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:src="@drawable/ic_account" />

        <TextView
            android:id="@+id/account_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/account_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!--inputType is set as textEmailAddress to prevent emoticons from showing up-->
        <EditText
            android:id="@+id/account_usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_asterisk"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_question"
            android:hint="@string/account_enter_username"
            android:inputType="textEmailAddress"
            android:maxLength="32"
            android:maxLines="1" />

        <EditText
            android:id="@+id/account_nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/account_enter_name"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />

        <EditText
            android:id="@+id/account_lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/account_enter_last_name"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />

        <EditText
            android:id="@+id/account_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_asterisk"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_question"
            android:hint="@string/account_enter_password"
            android:inputType="textPassword"
            android:maxLength="64"
            android:maxLines="1" />

        <EditText
            android:id="@+id/account_repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_asterisk"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_question"
            android:hint="@string/account_repeat_password"
            android:inputType="textPassword"
            android:maxLength="64"
            android:maxLines="1" />

        <EditText
            android:id="@+id/account_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/account_enter_email"
            android:inputType="textEmailAddress"
            android:maxLength="254"
            android:maxLines="1" />

        <CheckBox
            android:id="@+id/account_adminCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/account_is_admin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/account_imageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/account_select_image" />

            <ImageView
                android:id="@+id/account_profileImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/account_imageLabel" />

            <ImageButton
                android:id="@+id/account_imagePickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/account_imageLabel"
                android:src="@drawable/ic_folder" />
        </RelativeLayout>

        <TextView
            android:id="@+id/account_removeImageOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:text="@string/account_remove_image"
            android:visibility="gone" />

        <TextView
            android:id="@+id/account_passwordMatchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"></View>

        <LinearLayout
            android:id="@+id/account_creationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/account_createButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:enabled="false"
                android:text="@string/action_create" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_deletionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/account_deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:enabled="false"
                android:text="@string/action_delete" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_updateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/account_updateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.4"
                android:enabled="false"
                android:text="@string/action_update" />

            <Button
                android:id="@+id/account_backButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.4"
                android:text="@string/action_back" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_otherLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/account_otherCreateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.4"
                android:enabled="false"
                android:text="@string/action_create" />

            <Button
                android:id="@+id/account_otherBackButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.4"
                android:text="@string/action_back" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_linkLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/account_log_in_description" />

            <TextView
                android:id="@+id/account_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:text="@string/account_log_in" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"></View>
    </LinearLayout>
</ScrollView>
