<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/management_backLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/management_createAccountButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.4"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/action_create_account" />

        <Button
            android:id="@+id/management_backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.4"
            android:text="@string/action_back" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/management_userLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/management_backLayout"
        android:visibility="gone"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/management_messageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/management_backLayout"
        android:visibility="gone">

        <TextView
            android:id="@+id/management_messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/management_empty_users"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/management_messageTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_search" />
    </RelativeLayout>
</RelativeLayout>